sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Default_Record_Type__mdt/SFDC_Industry_Default_Record_Type__mdt.object-meta.xml
<CustomObject>
    <description>Record Types that should be defaulted to when mapping a particular object, for a particular section.</description>
    <label>SFDC Industry Default Record Type</label>
    <pluralLabel>SFDC Industry Default Record Types</pluralLabel>
</CustomObject>