sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Default_Record_Type__mdt/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Label that should up in an informational dialog/box to the user when this section is being displayed.</description>
    <inlineHelpText>Label that should up in an informational dialog/box to the user when this section is being displayed.</inlineHelpText>
    <label>Additional Information</label>
    <length>80</length>
    <type>Text</type>
</CustomField>