sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Default_Record_Type__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>The API Name of the record type to default to (for the Related Object).</description>
    <label>API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>