sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Default_Record_Type__mdt/fields/Controlling_Question__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question__c</fullName>
    <description>The question that this default originates from.</description>
    <label>Controlling Question</label>
    <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Default Record Types</relationshipLabel>
    <relationshipName>SFDC_Industry_Default_Record_Types</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>