sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Default_Record_Type__mdt/fields/Controlling_Question_Value__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question_Value__c</fullName>
    <description>The answer/section that controls this default.</description>
    <label>Controlling Question Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>