sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Default_Record_Type__mdt/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>The SObject that this Record Type Default belongs to.</description>
    <label>Related Object</label>
    <referenceTo>SFDC_Industry_Mapping_Object__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Default Record Types</relationshipLabel>
    <relationshipName>SFDC_Industry_Default_Record_Types</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>