sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Default_Record_Type__mdt/listViews/All_Defaults.listView-meta.xml
<ListView>
    <fullName>All_Defaults</fullName>
    <columns>MasterLabel</columns>
    <columns>Related_Object__c</columns>
    <columns>API_Name__c</columns>
    <columns>Controlling_Question__c</columns>
    <columns>Controlling_Question_Value__c</columns>
    <columns>Additional_Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Defaults</label>
    <language>en_US</language>
</ListView>